re PR c++/37875 ([c++0x] misinterpreted closing angle bracket in decltype operand)

PR c++/37875
	* parser.c (cp_parser_decltype): Set greater_than_is_operator_p.

From-SVN: r152686